--- a/root/bash.env
+++ b/root/bash.env
@@ -14,7 +14,7 @@ case $SSHRC_SESSION_TYPE in
     fi
 
     if [[ -r $SSHRC_HOME/.bash_profile ]]; then
-      . $SSHRC_HOME/.bash_profile
+      . "$SSHRC_HOME/.bash_profile"
     fi
     ;;
   command)
@@ -26,7 +26,7 @@ case $SSHRC_SESSION_TYPE in
     fi
 
     if [[ -r $SSHRC_HOME/.bashrc ]]; then
-      . $SSHRC_HOME/.bashrc
+      . "$SSHRC_HOME/.bashrc"
     fi
     ;;
 esac
